Draw the rest of the fucking owl
http://knowyourmeme.com/memes/how-to-draw-an-owl