@@ -2,9 +2,42 @@ val sbttravisci = project in file(".")
 
 organization := "com.dwijnand"
         name := "sbt-travisci"
-     version := "0.1.0-SNAPSHOT"
+    licenses := Seq(("Apache-2.0", url("https://www.apache.org/licenses/LICENSE-2.0")))
+ description := "An sbt plugin to integrate with Travis CI"
+  developers := List(Developer("dwijnand", "Dale Wijnand", "dale wijnand gmail com", url("https://dwijnand.com")))
+   startYear := Some(2016)
+    homepage := scmInfo.value map (_.browseUrl)
+     scmInfo := Some(ScmInfo(url("https://github.com/dwijnand/sbt-travisci"), "scm:git:git@github.com:dwijnand/sbt-travisci.git"))
 
    sbtPlugin := true
 scalaVersion := "2.10.6"
 
+       maxErrors := 15
+triggeredMessage := Watched.clearWhenTriggered
+
+scalacOptions ++= Seq("-encoding", "utf8")
+scalacOptions ++= Seq("-deprecation", "-feature", "-unchecked", "-Xlint")
+scalacOptions  += "-Xfuture"
+scalacOptions  += "-Yno-adapted-args"
+scalacOptions  += "-Ywarn-dead-code"
+scalacOptions  += "-Ywarn-numeric-widen"
+scalacOptions  += "-Ywarn-value-discard"
+
 libraryDependencies += "org.yaml" % "snakeyaml" % "1.17"
+
+             fork in Test := false
+      logBuffered in Test := false
+parallelExecution in Test := true
+
+scriptedSettings
+scriptedLaunchOpts ++= Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
+scriptedBufferLog := true
+
+def toSbtPlugin(m: ModuleID) = Def.setting(
+  Defaults.sbtPluginExtra(m, (sbtBinaryVersion in update).value, (scalaBinaryVersion in update).value)
+)
+mimaPreviousArtifacts := Set.empty // Set(toSbtPlugin("com.dwijnand" % "sbt-travisci" % "1.0.0").value)
+
+TaskKey[Unit]("verify") := Def.sequential(test in Test, scripted.toTask(""), mimaReportBinaryIssues).value
+
+cancelable in Global := true
